# embedded-plots

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
examples/: free_axis.rs  polyplot_mono.rs  polyplot_rgb.rs  single_plot_mono.rs  single_plot_rgb.rs
examples/basic-plot/: main.rs
src/: axis.rs  curve.rs  drawable_axis.rs  drawable_curve.rs  lib.rs  plot.rs  polyplot.rs  range_conv.rs  single_plot.rs
